# Open_L_test

./: .gitignore  CMakeLists.txt  Makefile  README.md  add_numbers.c  calc_normals.cl  cl-demo.c  cl-helper.c  eventqueue.c  eventqueue.h  fragment.frag  gl_setup.c  gl_setup.h  linmath.h  my_cl_helper.c  my_cl_helper.h  mytest.c  mytest.cl  vertex.vert  water.frag  water.vert
